# aeternum-stock-backend

./: .ccls  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Rocket.toml
migrations/2024-05-13-201332_init/: down.sql  up.sql
migrations/2024-05-16-225846_add_from_and_comment/: down.sql  up.sql
migrations/2024-05-29-152033_add_friendly_name/: down.sql  up.sql
src/: driver.cpp  main.rs  models.rs
src/api/user/: test.sh  user.controller.cpp  user.controller.h  user.model.h  user.service.h
src/app/: app.controller.cpp  app.controller.h  app.service.h  test.sh
src/catcher/: _not_found.rs  mod.rs
src/controller/: inventory.rs  inventorybay.rs  log.rs  mod.rs  product.rs  productlot.rs  user.rs  utils.rs  warehouse.rs
src/controller/inventory/: _delete.rs  _get.rs  _get_one.rs  _input.rs  _update.rs  mod.rs  utils.rs
src/core/: controller.h  environment.cpp  environment.h  routeManager.h  service.h  utils.h
src/database/: _models.rs  error.rs  mod.rs  models.rs  schema.rs
src/database/models/: inventory.rs  inventorybay.rs  log.rs  product.rs  productlot.rs  user.rs  warehouse.rs
src/inventory/: handler.rs
src/middleware/: apikey.rs  cors.rs  mod.rs
static/: manifest.json
templates/: base.html  usersList.html
