[package]
name = "RESTful"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.6.20", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
diesel = { version = "2.1.0", features = ["mysql", "chrono", "r2d2"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15"

